# voicechat-xyz

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: release-tauri.yml
apps/client/: .env.local-server  .env.production  components.json  electron-builder.yml  electron.vite.config.ts  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
apps/client-tauri/: .env.example  README.md  index.html  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/client-tauri/scripts/: generate-icons.mjs
apps/client-tauri/src/: entry.ts  preload-shim.ts
apps/client-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/client-tauri/src-tauri/capabilities/: default.json
apps/client-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  prefs.rs  screen_share.rs  tray.rs  updater.rs
apps/client/scripts/: generate-icons.mjs
apps/client/src/main/: icon-draw.ts  icon.ts  index.ts  ipc.ts  prefs.ts  tray.ts  updater.ts
apps/client/src/preload/: index.ts
apps/server/: .env.example  Dockerfile  package.json  rooms.yaml
apps/server/src/: config.ts  index.ts  livekit-client.ts  rooms-registry.ts  routes.ts  token-issuer.ts  validation.ts
apps/server/test/: sanitize-filename.test.ts  signed-url.test.ts  smoke-upload.test.ts  verify-livekit-token.test.ts
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml  livekit.yaml
docs/superpowers/plans/: 2026-04-26-voicechat-implementation.md
docs/superpowers/specs/: 2026-04-26-voicechat-design.md
(+48 files in other folders)
