[package]
name = "voicechat-tauri"
version = "0.1.4"
description = "VoiceChat desktop client (Tauri)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "voicechat_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

[features]
# `custom-protocol` включается tauri-build для production-сборок.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
